--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -104,6 +104,23 @@ body {
   color: #fc7d0e;
 }
 
+hr {
+  max-width: 256px;
+  max-width: 16rem;
+  color: #f8f9fa;
+}
+
+@media (min-width: 675px) {
+
+  hr {
+    max-width: 32rem;
+  }
+}
+
+hr {
+  margin: 0 auto;
+}
+
 /* Navigation */
 
 header {
@@ -483,9 +500,8 @@ main {
 /* Services Section */
 
 .services__layout {
-
-  background: #f8f9fa;
   padding-top: 2em;
+  padding-bottom: 6em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -493,9 +509,9 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   margin: 0 auto;
 }
 
@@ -543,4 +559,79 @@ main {
 .service__para {
   max-width: 30ch;
   text-align: center;
+}
+
+/* Footer */
+
+.footer {
+  padding: 1em;
+  background: #32373e;
+  color: rgb(174, 174, 175);
+  margin: 0 auto;
+}
+
+.footer__title {
+  width: auto;
+  color: #fc7d0e;
+  border-radius: 4px;
+  text-align: center;
+  padding: .5em;
+  font-family: "PT Serif", serif;
+  letter-spacing: 3.2px;
+  font-size: 30px;
+  line-height: 33px;
+}
+
+.footer .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 42em;
+  margin: 0 auto;
+}
+
+.footer__link {
+  font-weight: 600;
+  font-size: 12px;
+  letter-spacing: 0.2px;
+  padding: 0.25em 0;
+  text-decoration: none;
+  color: #798492;
+  -webkit-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out
+}
+
+.footer__link:hover {
+  color: #f8f9fa;
+}
+
+.footer__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer__subtitle {
+  font-weight: 600;
+  font-size: 16px;
+  color: #798492;
+}
+
+.footer__link--social {
+  font-size: 18px
+}
+
+.footer__link--social:hover {
+  color: #fc7d0e;
+}
+
+.footer__link--social + .footer__link--social {
+  margin-left: 16px;
 }
